--- a/springcloud-config-provider.yml
+++ b/springcloud-config-provider.yml
@@ -1,3 +1,4 @@
+---
 server:
   port: 8003
   servlet:
@@ -24,6 +25,41 @@ eureka:
       defaultZone: http://localhost:7002/eureka 
   instance:
     instance-id: springcloud-user:8003   
+    prefer-ip-address: true
+
+info:
+  app.name:  springcloud-dept
+  company.name:  www.hzitxx.com
+  build.artifactId:  $project.artifactId$
+  build.version:  $project.version$
+
+---
+server:
+  port: 8005
+  servlet:
+    context-path: /provider
+
+spring:
+  profiles: test
+  application:
+    name: springcloud-user  
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource  
+    driver-class-name: com.mysql.jdbc.Driver  
+    url: jdbc:mysql://47.101.42.108:3306/bj1902  
+    username: root
+    password: 1947728008YJH
+    
+logging:
+  level:
+    com.hzit.mapper: debug
+    
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:7002/eureka 
+  instance:
+    instance-id: springcloud-user:8005   
     prefer-ip-address: true
 
 info:
